Arquitetura e falhas criticas
Implementa relacoes de banco de dados entre Loja, Corredor, Prateleira e Produto.
Forca o isolamento da loja usando o storeId correto.
Retorna multiplos resultados de busca em vez de um unico item.
Adiciona exclusao em cascata para evitar produtos orfaos.
Corrige o payload de criacao de produtos para bloquear valores nulos.
Resolve o conflito de roteamento do Spring Boot.
Protege as consultas ao banco de dados contra SQL Injection.
Ativa o acesso simultaneo para multiplos usuarios no painel da loja.
Busca dados na montagem do componente para evitar a perda de produtos ao atualizar a pagina.
Cria uma nova tela de selecao de loja para os clientes.
Torna os pins do mapa arrastaveis.
Vincula os pins a prateleiras existentes.
Permite a criacao de prateleiras sem um mapa obrigatorio.
Adiciona um menu de acoes em massa para mover multiplos produtos simultaneamente.
Corrige o parser de login para ler erros em texto plano.